--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ function resetGame(){
   saveState();  // persist reset
 }
 
-let qrShown=false;
+let qrShown=true;
 function toggleQR(){
   const container=document.getElementById('qr-container');
   if(!qrShown){
