--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Gin Rummy Score Keeper</title>
 <script src="js/qrcode.min.js"></script>
 <style>
-body { font-family: Arial, sans-serif; margin:5px; padding:5px; background:#f4f4f9; text-align:center;}
+body { font-family: Arial, sans-serif; margin:5px; padding:5px; background:#f4f4f9; text-align:center;max-width:800px;}
 h1 { font-size:1.2em; margin-bottom:5px; }
 
 table { width:100%; border-collapse: collapse; font-size:0.85em; margin-bottom:10px; table-layout:fixed; }
@@ -42,7 +42,7 @@ input[type="checkbox"], input[type="radio"] { width:18px; height:18px; }
 .buttons { display:flex; justify-content:space-between; margin-top:5px; }
 button { font-size:0.9em; padding:8px 14px; }
 #reset-btn { font-size:0.8em; padding:4px 8px; margin-top:5px; }
-#qr-container { margin-top:5px; display:none;}
+#qr-container { margin-top:5px; display:none; display:flex; }
 </style>
 </head>
 <body>
