--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ input[type="checkbox"], input[type="radio"] { width:18px; height:18px; }
 .buttons { display:flex; justify-content:space-between; margin-top:5px; }
 button { font-size:0.9em; padding:8px 14px; }
 #reset-btn { font-size:0.8em; padding:4px 8px; margin-top:5px; }
-#qr-container { margin-top:5px; display:none; display:flex; }
+#qr-container { margin-top:5px; display:none; display:flex; justify-content:center; }
 </style>
 </head>
 <body>
