--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Gin Rummy Score Keeper</title>
 <script src="js/qrcode.min.js"></script>
 <style>
-body { font-family: Arial, sans-serif; margin:5px; padding:5px; background:#f4f4f9; text-align:center;max-width:800px; display: flex; justify-content: center; }
+body { font-family: Arial, sans-serif; margin:5px; padding:5px; background:#f4f4f9; text-align:center;max-width:800px; text-align:center; }
 h1 { font-size:1.2em; margin-bottom:5px; }
 
 table { width:100%; border-collapse: collapse; font-size:0.85em; margin-bottom:10px; table-layout:fixed; }
